<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/fundo">

    <RelativeLayout
        android:id="@+id/topoPagina"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/background_gradient">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="27dp"
            android:background="@color/transparente"
            android:src="@drawable/menu" />


        <TextView
            android:id="@+id/news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:text="@string/news"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/news"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="29dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textColor="@color/white"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/far"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/tempo"
                android:text="°F"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/cloud"
                android:layout_width="76dp"
                android:layout_height="42dp"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@id/far"
                android:background="@drawable/cloud" />

            <TextView
                android:id="@+id/ny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/cloud"
                android:text="@string/ny"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ny"
                android:layout_toRightOf="@id/cloud"
                android:text="@string/cloudy"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bloco1"
        android:layout_width="match_parent"
        android:layout_height="282dp"
        android:layout_below="@id/topoPagina"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/liberdade"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/material_image_4" />

        <TextView
            android:id="@+id/texto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/liberdade"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/the_quick_brown"
            android:textColor="@color/coral" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/texto1"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/today"
            android:textColor="@color/gray" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/caixa1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/bloco1"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/noticia1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/noticia1" />

        <TextView
            android:id="@+id/texto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/noticia1"
            android:text="@string/lazy_dog"
            android:textColor="@color/coral" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/texto2"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/noticia1"
            android:text="@string/pm"
            android:textColor="@color/gray"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/caixa1"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/noticia2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/noticia2" />

        <TextView
            android:id="@+id/texto3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/noticia2"
            android:text="@string/over"
            android:textColor="@color/coral"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/texto3"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/noticia2"
            android:text="@string/time"
            android:textColor="@color/gray"
            android:textSize="12sp"/>
    </RelativeLayout>

</RelativeLayout>